--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>White Edition</title>
+<title>FOLSE</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css')}}">
 
